// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBarProvider /> should render <ProgressBar /> 1`] = `
<div
  style={
    Object {
      "left": 0,
      "opacity": 0,
      "position": "fixed",
      "top": 0,
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": -10,
    }
  }
>
  <div
    style={
      Object {
        "background": "#77b6ff",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBarProvider /> should render progress bar with className 1`] = `
<div
  style={
    Object {
      "left": 0,
      "opacity": 0,
      "position": "fixed",
      "top": 0,
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": -10,
    }
  }
>
  <div
    className="my-custom-classname"
    style={
      Object {
        "background": "#77b6ff",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBarProvider /> should render progress bar with color hex 1`] = `
<div
  style={
    Object {
      "left": 0,
      "opacity": 0,
      "position": "fixed",
      "top": 0,
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": -10,
    }
  }
>
  <div
    style={
      Object {
        "background": "#db7093",
        "boxShadow": "0 0 10px rgba(219, 112, 147, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBarProvider /> should render progress bar with color name 1`] = `
<div
  style={
    Object {
      "left": 0,
      "opacity": 0,
      "position": "fixed",
      "top": 0,
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": -10,
    }
  }
>
  <div
    style={
      Object {
        "background": "#ff0000",
        "boxShadow": "0 0 10px rgba(255, 0, 0, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`<ProgressBarProvider /> should render progress bar with styles 1`] = `
<div
  style={
    Object {
      "left": 0,
      "opacity": 0,
      "position": "fixed",
      "top": 0,
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": -10,
    }
  }
>
  <div
    style={
      Object {
        "background": "#77b6ff",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "5px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0%",
      }
    }
  />
</div>
`;
